[gd_scene load_steps=3 format=3 uid="uid://dwprtchm4elp4"]

[ext_resource type="Script" path="res://components/health_component.gd" id="1_e5m5u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wddj8"]
bg_color = Color(0.129412, 0.701961, 0.521569, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_e5m5u")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="Control"]
custom_minimum_size = Vector2(80, 15)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 18.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/fill = SubResource("StyleBoxFlat_wddj8")

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(0, -39)
scale = Vector2(-7.47158, 88.2282)
